--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.1"
+    "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.1",
+    "socket.io-client": "https://aistudiocdn.com/socket.io-client@^4.8.1",
+    "http": "https://aistudiocdn.com/http@^0.0.1-security",
+    "next": "https://aistudiocdn.com/next@^15.5.3",
+    "socket.io": "https://aistudiocdn.com/socket.io@^4.8.1",
+    "net": "https://aistudiocdn.com/net@^1.0.2"
   }
 }
 </script>
